[project]
name = "fm-signal-simulator"
version = "0.1.0"
description = "A Python FM signal simulator that converts WAV audio into complex IQ samples with configurable RF impairments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Greyson Meetze" }
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/Greyraid/fm-signal-simulator"
Repository = "https://github.com/Greyraid/fm-signal-simulator"

[project.scripts]
fmsim = "fmsim.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"