[project]
name = "fm-signal-simulator"
version = "0.8.0"
description = "A Python FM signal simulator with configurable RF impairments, CLI support, and an integrated PySide6 GUI for IQ, plot, and audio playback visualization."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Greyson Meetze" }
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "PySide6"
]

[project.urls]
Homepage = "https://github.com/Greyraid/fm-signal-simulator"
Repository = "https://github.com/Greyraid/fm-signal-simulator"

[project.scripts]
fmsim = "fmsim.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"